--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <td></td>
                     <td colspan="2">
                         <p style="display:inline">
-                                <label for="Kumari/Ms" style="padding-left: 70px;">Last name/Sur Name</label>
+                                <label for="Kumari/Ms">Last name/Sur Name</label>
                                 <label for="Shri/Mr" style="padding-left: 60px;">First Name</label>
                                 <label for="Smt/Mrs" style="padding-left: 70px;">Middle Name</label><br>
                                     <input type="text" id="Shri/Mr">
